--- a/CoffeeFinder/templates/CoffeeFinderApp/VIEW_ORDER.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/VIEW_ORDER.html
@@ -90,6 +90,7 @@
             </div>
           </div>
             <div class="col-md-6 col-md-offset-3">
+            <!-- form that takes phone number of user and types in the phone number automatically if the user is logged in  -->
             <form role="form" data-menu-order="content-form" class="box" id="login_form"enctype="multipart/form-data" method="post" action="">
             {% csrf_token %}
             <div class="form-group">
@@ -101,6 +102,7 @@
             </div>
             <input type="submit" value="View Orders" data-menu-order="content-form-submit" class="btn " />
         </form>
+        <!--  -->
             </div>
         </div>
       </section>
