Iss#72 Users can now add items to their favorites

--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -70,6 +70,12 @@
           <div class="row">
             <div class="col-md-9">
               <article>
+      
+
+      <form action="#" method="get">
+       <input type="submit" class="btn" value="Add to favorites" name="favbtn">
+      </form>
+
 			<h3>Customers' Reviews</h3>
 			{%if reviews%}
 			<ul>
