Iss#72 Favorite button changes to unfavorite after adding to favorite and added documentation

--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -73,7 +73,7 @@
       
 
       <form action="#" method="get">
-       <input type="submit" class="btn" value="Add to favorites" name="favbtn">
+       <input type="submit" class="btn" value="{{btntxt}}" name="favbtn">
       </form>
 
 			<h3>Customers' Reviews</h3>
