--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -71,11 +71,11 @@
             <div class="col-md-9">
               <article>
       
-
-      <form action="#" method="get">
-       <input type="submit" class="btn" value="{{btntxt}}" name="favbtn">
-      </form>
-
+      {% if auth == 1%}
+        <form action="#" method="get">
+         <input type="submit" class="btn" value="{{btntxt}}" name="favbtn">
+        </form>
+      {% endif %}
 			<h3>Customers' Reviews</h3>
 			{%if reviews%}
 			<ul>
