--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -32,6 +32,7 @@
     <body>
         <body class="menu-style-2 responsive sticky-menu">
         <div class="site-wrapper">
+
          <div class="order-menu-wrapper">
         <button class="close-order fa fa-cutlery"></button>
         <div class="order-menu">
@@ -108,24 +109,27 @@
           </div>
           <div class="order-review hidden">
             <h2 class="color text-center">your order</h2>
+            <form role="form" data-menu-order="customer" id="login_form" action ="/CoffeeFinderApp/order/" method="post">
+                {% csrf_token %}
+                <p>{{ form.non_field_errors }}</p>
+                {{ field.errors }}
+
             <ul class="order-summary"></ul>
             <h6 class="price text-center color">total: $<span>0</span></h6>
             <h2 class="color text-center">your delivery info</h2>
-            <form role="form" data-menu-order="customer" data-success="You order was successfully sent!">
               <div class="form-group">
-                <input type="text" placeholder="name" id="order-name" name="name">
-              </div>
-              <div class="form-group">
-                <input type="email" placeholder="email" id="order-email" name="email">
+                <input  hidden id="myOrder" size="20" type="text" name="order" value = "">
+                <input type="text" placeholder="name" id="order-name" name="Name">
               </div>
               <div class="form-group">
                 <input type="tel" placeholder="phone" id="order-phone" name="phone">
               </div>
               <div class="form-group">
-                <input type="text" placeholder="delivery address" id="order-address" name="address">
+                <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress">
               </div>
               <div class="form-group">
-                <textarea placeholder="Add Notes" name="note" class="order-notes hidden"></textarea>
+                <input hidden id="page" size="20" type="text" name="Page" value={{ page.id }}  >
+                <!--<textarea placeholder="Add Notes" name="note" class="order-notes hidden"></textarea>-->
               </div>
               <div class="row">
                 <div class="col-md-6">
@@ -143,6 +147,7 @@
                 <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
                     <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
                         <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
+
                         <br><br>
                         <!--<h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>-->
 
