--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -37,7 +37,9 @@
                 <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
                 </li>
                 {% if user.is_staff %}
-                <li><a href="/CoffeeFinderApp/page/{{ coffeeshop.slug }}">View My Coffeeshop</a></li>
+                  {% if not coffeeshop == None %}
+                  <li><a href="/CoffeeFinderApp/page/{{ coffeeshop.slug }}">View My Coffeeshop</a></li>
+                  {% endif%}
                 {% endif %}
                 {% if user.is_authenticated %}
                 <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
