--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -334,7 +334,7 @@
         </div>
       </header>
               <!-- Yasser -->
-        {% ifequal page.owner current_user.username %}
+        {% if page.owner.username == current_user.username %}
             <h4>Orders: </h4>
             {% if orders %}
                     <table style="width:60%">
@@ -362,16 +362,16 @@
             {% else %}
                 <strong>There are currently no orders.</strong>
             {% endif %}
-        {% endifequal %}
+        {% endif %}
         <!-- Yasser -->
 
         </br>
-        {% ifequal page.owner username %}
+        {% if page.owner.username == username %}
         <h4><a href="/CoffeeFinderApp/{{ page_name_slug}}/editStatus">Edit Status on an Order</a></h4>
         <h4><a href="/CoffeeFinderApp/description_edit/"> Edit Page's Info </a></h4> 
         <h4> <a href="/CoffeeFinderApp/add_item/"> Add New Item </a></h4>
         <h4> <a href="/CoffeeFinderApp/"> Back to homepage </a></h4>
-        {% endifequal %}
+        {% endif %}
 
           
         <footer class="site-footer">
