--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -28,6 +28,59 @@
       <script type="text/javascript"
         src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places">
       </script>
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> 
+      <script src="http://malsup.github.com/jquery.form.js"></script> 
+      <script type="text/javascript">
+      
+        var lat;
+        var long;
+        var coords;
+
+        function reverseGecoding(location){
+          var lat = location.lat();
+          var lng = location.lng();
+          var xmlHttp = null;
+        
+        
+          //initialize request and send it
+          xmlHttp = new XMLHttpRequest();
+          xmlHttp.open( "GET", "https://maps.googleapis.com/maps/api/geocode/json?latlng="+lat+","+lng+"&key={{APIkey}}", false );
+          xmlHttp.send( null );
+          //calls a function to process the response that was received from the request
+          ProcessRequest(xmlHttp.responseText);
+        }
+
+        function myFunction() {
+          if(navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+            window.alert("Your location will be added automatically as the delivery address");
+            reverseGecoding(pos);
+            }, function() {
+              handleNoGeolocation(true);
+            });
+          } else {
+            // Browser doesn't support Geolocation
+            handleNoGeolocation(false);
+          }
+        }
+          function ProcessRequest(response) {
+          //parse json object to a dictionary
+          var json_data = JSON.parse(response);
+          
+          //get the formatted address from the dictionary
+          var lol = json_data.results[0]['formatted_address'];
+          document.getElementById("order-address").value = lol.toString();
+        }
+        function handleNoGeolocation(errorFlag) {
+          if (errorFlag) {
+            var content = 'Error: The Geolocation service failed.';
+          } else {
+            var content = 'Error: Your browser doesn\'t support geolocation.';
+          }
+        }
+      
+      </script>
     </head>
     <body>
         <body class="menu-style-2 responsive sticky-menu">
@@ -103,7 +156,7 @@
                 <button data-menu-order="notes" class="btn btn-md">add order notes</button>
               </div>
               <div class="col-md-6">
-                <button data-menu-order="review" class="btn btn-md">review your order</button>
+                <button onclick="myFunction()" data-menu-order="review" class="btn btn-md">review your order</button>
               </div>
             </div>
           </div>
@@ -125,11 +178,16 @@
                 <input type="tel" placeholder="phone" id="order-phone" name="phone">
               </div>
               <div class="form-group">
-                <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress">
+                <input type="hidden" name="deliveryAddress">
+                <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress" readonly>
               </div>
               <div class="form-group">
                 <input hidden id="page" size="20" type="text" name="Page" value={{ page.id }}  >
                 <!--<textarea placeholder="Add Notes" name="note" class="order-notes hidden"></textarea>-->
+              </div>
+              <div class="form-group">
+                <input id="long" size="20" type="text" name="longitude"  hidden> <br>
+                <input id="lat" size="20" type="text" name="latitude" hidden >
               </div>
               <div class="row">
                 <div class="col-md-6">
