--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="{% static 'css/core.css' %}">
         <link rel="stylesheet" href="{% static 'css/theme.css' %}">
         <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,latin-ext">
+        {#<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,latin-ext">#}
         <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
         <link rel="stylesheet" href="{% static 'css/prettyPhoto.css' %}">
         <link rel="stylesheet" href="{% static 'css/colorpicker.css' %}">
@@ -109,7 +109,7 @@
           </div>
           <div class="order-review hidden">
             <h2 class="color text-center">your order</h2>
-            <form role="form" data-menu-order="customer" id="login_form" action ="/CoffeeFinderApp/order/" method="post">
+            <form role="form" data-menu-order="customer" id="order_form" action ="/CoffeeFinderApp/order/" method="post">
                 {% csrf_token %}
                 <p>{{ form.non_field_errors }}</p>
                 {{ field.errors }}
@@ -139,21 +139,37 @@
                   <button data-menu-order="place" type="submit" class="btn btn-md">place order</button>
                 </div>
               </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div hidden id="successMessage" class="alert alert-success contact-success">
+                      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                      <i class="fa fa-check"></i> Your Order was sent successfully 
+                    </div>
+                  </div>
+                </div>
+                  <div class="row">
+                  <div class="col-md-12">
+                    <div hidden id="errorMessage" class="alert alert-success contact-success">
+                      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                      <i class="fa fa-check"></i> Error
+                    </div>
+                  </div>
+                </div>
             </form>
           </div>
         </div>
       </div>
     
-                <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
-                    <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
-                        <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
+                  <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
+                      <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
+                          <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
 
-                        <br><br>
-                        <!--<h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>-->
+                          <br><br>
+                          <!--<h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>-->
 
-                    </div>
-                </div>
-          
+                      </div>
+                  </div>
+        
       <section>
         <div class="container">
           <div class="row">
@@ -298,7 +314,7 @@
                     {{ form.image.errors }}
                     {{ form.image }}
                 </p>
-                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
+                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} >
                 <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
                 <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
                 <p><input type="submit" value="Upload" class="btn md" /></p>
@@ -390,9 +406,10 @@
           </div>
       </footer>
 
-        
 
+        
         <script src="{% static 'javascript/jquery.js' %}"></script>
+        <script src="{% static 'javascript/main.js' %}"></script>
         <script src="{% static 'javascript/gmap3.js' %}"></script>
         <script src="{% static 'javascript/jquery.cookie.js' %}"></script>
         <script src="{% static 'javascript/theme.js' %}"></script>
