--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -151,7 +151,7 @@
                   <div class="col-md-12">
                     <div hidden id="errorMessage" class="alert alert-success contact-success">
                       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                      <i class="fa fa-check"></i> Error
+                      <i class="fa fa-check"></i> Please fill in all the fields
                     </div>
                   </div>
                 </div>
