--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -58,7 +58,7 @@
             reverseGecoding(pos);
             }, function() {
               handleNoGeolocation(true);
-            });
+            }, {enableHighAccuracy: true});
           } else {
             // Browser doesn't support Geolocation
             handleNoGeolocation(false);
@@ -69,8 +69,8 @@
           var json_data = JSON.parse(response);
             
           //get the formatted address from the dictionary
-          var lol = json_data.results[0]['formatted_address'];
-          document.getElementById("order-address").value = lol.toString();
+          var address = json_data.results[0]['formatted_address'];
+          document.getElementById("order-address").value = address.toString();
         }
         function handleNoGeolocation(errorFlag) {
           if (errorFlag) {
@@ -178,8 +178,7 @@
                 <input type="tel" placeholder="phone" id="order-phone" name="phone">
               </div>
               <div class="form-group">
-                <input type="hidden" name="deliveryAddress">
-                <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress" readonly>
+                <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress">
               </div>
               <div class="form-group">
                 <input hidden id="page" size="20" type="text" name="Page" value={{ page.id }}  >
@@ -454,6 +453,7 @@
         <script src="{% static 'javascript/gmap3.js' %}"></script>
         <script src="{% static 'javascript/jquery.cookie.js' %}"></script>
         <script src="{% static 'javascript/theme.js' %}"></script>
+        <script src="{% static 'javascript/main.js' %}"></script>
         <script src="{% static 'javascript/smoothscroll.js' %}"></script>
         <script src="{% static 'javascript/bootstrap/tab.js' %}"></script>
         <script src="{% static 'javascript/bootstrap/collapse.js' %}"></script>
