--- a/CoffeeFinder/templates/CoffeeFinderApp/item_edit.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/item_edit.html
@@ -98,10 +98,15 @@
           <div class="row">
             <div class="col-md-6">
             <!-- form for getting coffeshop registeration info-->
-            <form role="form" data-menu-order="content-form" class="box" id="Coffee_item_form" action = "/CoffeeFinderApp/item_edit/" method="post">
+            <form role="form" data-menu-order="content-form" class="box" id="Coffee_item_form_edit" action = "/CoffeeFinderApp/item_edit/" method="post">
             {% csrf_token %}
             <div class="form-group">
-            <h5> Add new item to the list  </h5>
+              <div>
+             <h6>{% if messages %}
+             {% for msg in messages %}{{ msg }}{% endfor %}
+             {% endif %}</h6>
+            </div>
+            <h5> Edit your {{item.name}} </h5>
             </div>
             <div class="form-group">
             <h6>{% for field in form.visible_fields %}
@@ -109,24 +114,15 @@
                  {{ field.name }}  {{ field }} <br>
                 {% endfor %}  <br> </h6>
             </div>
-            <div>
-             <h9>{% if messages %}
-             {% for msg in messages %}{{ msg }}{% endfor %}
-             {% endif %}</h9>
-            </div>
-            
-            </div>
+          
+             <h6> <input type="submit" value="Apply" data-menu-order="content-form-submit" class="btn " />
+        </form> <a  href="/CoffeeFinderApp/coffee_item_page/{{item.id}}"> Back</a>  </h6>
+         </h6>
+                </div>
                 <div class="col-md-6" >
                 
            </div>
         </div>
-    <div class="row">
-    <h6> <input type="submit" value="Edit" data-menu-order="content-form-submit" class="btn " />
-        </form> 
-        <div>
-         <a href="/CoffeeFinderApp/coffee_item_page/{{item.id}}"> Back </a> </h6>
-         </div>
-      </div>
     </section>
     </div>
     </div>
