--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -368,9 +368,8 @@
         </br>
         {% ifequal page.owner_id user_id %}
         <h4><a href="/CoffeeFinderApp/{{ page_name_slug}}/editStatus">Edit Status on an Order</a></h4>
-        <h4><a href="/CoffeeFinderApp/description_edit/"> Edit Page's Info </a></h4> 
-        <h4> <a href="/CoffeeFinderApp/add_item/"> Add New Item </a></h4>
-        <h4> <a href="/CoffeeFinderApp/"> Back to homepage </a></h4>
+        <h4><a href="/CoffeeFinderApp/description_edit/"> What makes us special </a></h4> 
+        <h4> <a href="/CoffeeFinderApp/add_item/"> Add New Item to the list  </a></h4>
         {% endifequal %}
 
           
