fixed bug  related to authentication for issues #62 #63

--- a/CoffeeFinder/templates/CoffeeFinderApp/requests.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/requests.html
@@ -233,7 +233,7 @@
             <div class="col-md-6 col-md-offset-3">
                  <h4 style="top: 55%; left: 50%;" class="ls-l text-center" > You're not authorized 
                  to view this page </h4>
-                 <h4 style="top: 55%; left: 50%;" class="ls-l text-center" > <a href="/CoffeeFinderApp/"> Back </a>
+                 <h4 style="top: 55%; left: 50%;" class="ls-l text-center" > <a href="/CoffeeFinderApp/"> Home page </a>
                   </h4>               
             </div>
           </div>
