#88 The user gets redirected to a page after registeration where he can enter a phone number for ordering. Also the user's phone number is now added automatically to the order form where he can edit it.

--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -121,9 +121,17 @@
                 <input  hidden id="myOrder" size="20" type="text" name="order" value = "">
                 <input type="text" placeholder="name" id="order-name" name="Name">
               </div>
-              <div class="form-group">
-                <input type="tel" placeholder="phone" id="order-phone" name="phone">
-              </div>
+              {% if user.is_authenticated %}
+                {% if phone %}
+                  <div class="form-group">
+                    <input type="tel" placeholder="phone" id="order-phone" name="phone" value={{ phone }}>
+                  </div>
+                {% endif %}
+              {% else %}
+                <div class="form-group">
+                  <input type="tel" placeholder="phone" id="order-phone" name="phone">
+                </div>
+              {% endif %}
               <div class="form-group">
                 <input type="text" placeholder="delivery address" id="order-address" name="deliveryAddress">
               </div>
