fixed minor bug in which a coffeeshop owner cant see orders #76

--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -432,7 +432,7 @@
         </div>
       </header>
               <!-- Yasser -->
-        {% ifequal page.owner current_user.username %}
+        {% ifequal page.owner_id current_user.id %}
             <h4>Orders: </h4>
             {% if orders %}
                         <td> 
