--- a/CoffeeFinder/templates/CoffeeFinderApp/view_favorites.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/view_favorites.html
@@ -205,7 +205,7 @@
                               <h4 class="price"><span>$</span>{{ item.price }}</h4>
                             {% endfor %}
                         {% else %}
-                            <strong>No items are currently in page.</strong>
+                            <strong>No Favorites.</strong>
                         {% endif %}
                 </div>
               </div>
