solved conflicts for issues #62 #63

--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -515,6 +515,9 @@
         <h4><a href="/CoffeeFinderApp/{{ page_name_slug}}/editStatus">Edit Status on an Order</a></h4>
         <h4><a href="/CoffeeFinderApp/description_edit/"> What makes us special </a></h4> 
         <h4> <a href="/CoffeeFinderApp/add_item/"> Add New Item to the list  </a></h4>
+                {% endifequal %}
+
+
 
           
         <footer class="site-footer">
