--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -71,6 +71,11 @@
           <div class="row">
             <div class="col-md-9">
               <article>
+      {% if auth == 1%}
+        <form action="#" method="get">
+         <input type="submit" class="btn" value="{{btntxt}}" name="favbtn">
+        </form>
+      {% endif %}
       <h3>Customers' Reviews</h3>
       {%if reviews%}
       <ul>
